--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-  <section class="section">
-    <div>
+  <section class="section island-2 gutter-1-4">
+    <div class="wrapper gutter-1-4">
 
-      <figure class="photo">
-        <img class="img-flex" src="images/venus.jpg" alt="">
+      <figure class="photo wrapper gutter-1-4">
+        <img class="img-flex max-length" src="images/venus.jpg" alt="">
         <figcaption class="text-center milli italic">A real-colour image of Venus.</figcaption>
       </figure>
 
@@ -22,7 +22,7 @@
         <p class="mega italic">Venus, the second planet in the Solar System.</p>
         <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
-        <div class="gutter-quarter details">
+        <div class="details">
           <h2 class="mega">Physical characteristics</h2>
           <dl>
             <dt class=" milli">Mean radius</dt>
